--- a/styles/syntax-custom-variables.less
+++ b/styles/syntax-custom-variables.less
@@ -6,15 +6,15 @@
 
 // Tests -----------------------------------
 
-[data-screen-row="1"] .gfm { color: var(--uno-1); }
-[data-screen-row="2"] .gfm { color: var(--uno-2); }
-[data-screen-row="3"] .gfm { color: var(--uno-3); }
-[data-screen-row="4"] .gfm { color: var(--uno-4); }
-[data-screen-row="5"] .gfm { color: var(--uno-5); }
+[data-screen-row="1"] .plain { color: var(--uno-1); }
+[data-screen-row="2"] .plain { color: var(--uno-2); }
+[data-screen-row="3"] .plain { color: var(--uno-3); }
+[data-screen-row="4"] .plain { color: var(--uno-4); }
+[data-screen-row="5"] .plain { color: var(--uno-5); }
 
-[data-screen-row="7"] .gfm { color: var(--duo-1); }
-[data-screen-row="8"] .gfm { color: var(--duo-2); }
-[data-screen-row="9"] .gfm { color: var(--duo-3); }
+[data-screen-row="7"] .plain { color: var(--duo-1); }
+[data-screen-row="8"] .plain { color: var(--duo-2); }
+[data-screen-row="9"] .plain { color: var(--duo-3); }
 
 
 // Custom settings
