--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,7 +1,7 @@
 
 // DuoTone dark
 
-@syntax-hue:    240; // must be same as main.coffee hue
+@syntax-hue:              250;
 
 @syntax-fg:               hsl(@syntax-hue, 66%, 80%);
 @syntax-bg:               hsl(@syntax-hue, 12%, 18%);
