--- a/index.less
+++ b/index.less
@@ -4,4 +4,5 @@
 @import (reference) "styles/syntax-variables";
 @import "styles/settings";
 @import 'styles/editor';
+@import 'styles/palette';
 @import 'styles/languages/_index';
