--- a/index.less
+++ b/index.less
@@ -5,4 +5,7 @@
 @import "styles/settings";
 @import 'styles/editor';
 @import 'styles/palette';
-@import 'styles/languages/_index';
+
+// This imports the language styles from the duotone-syntax npm package
+// If you test locally, make sure to first run `apm install`
+@import 'node_modules/duotone-syntax/styles/languages/_index';
