--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,19 +1,19 @@
 
-// DuoTone dark
+// DuoTone United Power
 
 // Hues -----------------------------------
-@syntax-uno:    240;
-@syntax-duo:    20;
+@syntax-uno:    231;
+@syntax-duo:    335;
 
 
 // Language colors -----------------------------------
 
 // Uno hue
-@uno-1: hsl(@syntax-uno, 99%, 96%);
-@uno-2: hsl(@syntax-uno, 66%, 80%);
-@uno-3: hsl(@syntax-uno, 22%, 60%);
-@uno-4: hsl(@syntax-uno, 10%, 44%);
-@uno-5: hsl(@syntax-uno, 10%, 33%);
+@uno-1: hsl(@syntax-uno, 100%, 22%);
+@uno-2: hsl(@syntax-uno, 100%, 48.6%);
+@uno-3: hsl(@syntax-uno, 98%, 63%);
+@uno-4: hsl(@syntax-uno, 88%, 83%);
+@uno-5: hsl(@syntax-uno, 68%, 93%);
 
 // Duo hue
 @duo-1: hsl(@syntax-duo, 99%, 77%);
@@ -24,7 +24,7 @@
 // Base colors -----------------------------------
 @syntax-fg:               @uno-2;
 @syntax-bg:               hsl(@syntax-uno, 12%, 18%);
-@syntax-accent:           hsl(@syntax-duo, 100%, 66%);
+@syntax-accent:           hsl(@syntax-duo, 100%, 61.8%);
 @syntax-guide:            lighten(@syntax-bg, 10%);
 @syntax-selection:        lighten(@syntax-bg, 12%);
 @syntax-selection-gutter: lighten(@syntax-bg, 3%);
